SA: clhsdb printmdo throws WrongTypeException when attached to a process with CDS

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 8, 9, 10
    • Component/s: hotspot
    • b12
    • generic
    • generic

      /home/jini/jdk10/hs/build/linux-x86_64-normal-server-slowdebug/images/jdk/bin/java -Xshare:on -cp ~/tests/ HelloAndLoop
      Hello -- and Loop
      ...after attaching to the process through jhsdb
      hsdb> printmdo -a
      Error: sun.jvm.hotspot.types.WrongTypeException: No suitable match for type of address 0x0000000800a34e80

            Assignee:
            Jini George (Inactive)
            Reporter:
            Jini George (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: