8174994: SA: clhsdb printmdo throws WrongTypeException when attached to a process with CDS

Read in the md region of the CDS archive in SA and map the vtable addresses to the corresponding metadata type.

Reviewed-by: iklam, coleenp, ysuenaga, dholmes