src/jdk.hotspot.agent/share/classes/sun/jvm/hotspot/runtime/VM.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -87,6 +87,7 @@ public class VM {
   private JNIHandles   handles;
   private Interpreter  interpreter;
   private StubRoutines stubRoutines;
+  private FileMapInfo  fileMapInfo;
   private Bytes        bytes;
 
   /** Flag indicating if JVMTI support is included in the build */
@@ -715,6 +716,16 @@ public class VM {
       vmregImpl = new VMRegImpl();
     }
     return vmregImpl;
+  }
+
+  public FileMapInfo getFileMapInfo() {
+    if (!isSharingEnabled()) {
+      return null;
+    }
+    if (fileMapInfo == null) {
+      fileMapInfo = new FileMapInfo();
+    }
+    return fileMapInfo;
   }
 
   public Bytes getBytes() {
